[package]
name = "paket"
version = "0.1.0-beta.4"
description = "A simple package manager for the Fish shell"
license = "MIT OR Apache-2.0"
authors = ["Jose Quintana <git.io/joseluisq>"]
keywords = [
	"cli",
	"fish-shell",
	"package-manager"
]
categories = ["command-line-utilities"]
edition = "2018"
include = ["src/**/*", "Cargo.toml", "Cargo.lock"]

[[bin]]
name = "paket"
path = "src/bin/paket.rs"

[lib]
name = "paket"
path = "src/lib.rs"

[dependencies]
dirs = "3.0"
toml = "0.5"
structopt = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1"
semver = { version = "0.10", features = ["serde"] }
sysinfo = "0.16"
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
