[package]
name = "paket"
version = "0.1.1"
authors = ["Jose Quintana <https://git.io/joseluisq>"]
license = "MIT OR Apache-2.0"
description = "A simple and fast package manager for the Fish shell"
repository = "https://github.com/joseluisq/paket"
readme = "README.md"
keywords = [
	"cli",
	"fish-shell",
	"package-manager"
]
categories = ["command-line-utilities"]
edition = "2021"
include = ["src/**/*", "Cargo.toml", "Cargo.lock"]

[[bin]]
name = "paket"
path = "src/bin/paket.rs"

[lib]
name = "paket"
path = "src/lib.rs"

[dependencies]
dirs = "3.0"
toml = "0.5"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_ignored = "0.1"
semver = { version = "0.10", default-features = false, features = ["serde"] }
sysinfo = "0.18"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
rpath = false
debug-assertions = false
